tenuo-core/build_output.txt
   Compiling tenuo-core v0.1.0 (/Users/aimable/Development/tenuo/tenuo-core)
warning: unused import: `std::time::Duration`
   --> src/cel.rs:108:5
    |
108 | use std::time::Duration;
    |     ^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Any`
   --> src/wire.rs:258:39
    |
258 |         use crate::constraints::{All, Any, Pattern, Range, Constraint};
    |                                       ^^^

error[E0308]: mismatched types
    --> src/planes.rs:1930:24
     |
1930 |             .parent_id(root.id())      // Correct parent linkage
     |              --------- ^^^^^^^^^ expected `WarrantId`, found `&WarrantId`
     |              |
     |              arguments to this method are incorrect
     |
note: method defined here
    --> src/warrant.rs:572:12
     |
 572 |     pub fn parent_id(mut self, parent_id: WarrantId) -> Self {
     |            ^^^^^^^^^           --------------------
help: consider using clone here
     |
1930 |             .parent_id(root.id().clone())      // Correct parent linkage
     |                                 ++++++++

warning: unused variable: `warrant`
    --> src/planes.rs:1327:13
     |
1327 |         let warrant = control_plane
     |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_warrant`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `warrant`
    --> src/planes.rs:1649:13
     |
1649 |         let warrant = control_plane
     |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_warrant`

warning: unused variable: `bytes2`
   --> src/wire.rs:293:13
    |
293 |         let bytes2 = encode(&warrant2).unwrap();
    |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_bytes2`

For more information about this error, try `rustc --explain E0308`.
warning: `tenuo-core` (lib test) generated 5 warnings
error: could not compile `tenuo-core` (lib test) due to 1 previous error; 5 warnings emitted
